Include worker process in kill pattern on Windows